tests/duarouter/trips/errors/vehicle_empty_departpos/errors.duarouter
Error: Attribute 'departPos' in definition of trip '0' is empty.
Error: Invalid departPos definition for vehicle '0';
 must be one of ("random", "random_free", "free", "base", "last" or a float)
Quitting (on error).
